--- a/server/client/src/styles/Profile.css
+++ b/server/client/src/styles/Profile.css
@@ -1,3 +1,12 @@
+.profile-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1; /* Faz com que ocupe o espaço sem forçar o .profile-card a crescer */
+    width: 100%;
+}
+
+
 .profile-card {
     background-color: #556;
     color: #eee;
